# medida

./: Dockerfile  README.md  docker-compose.yml  etl.env  requirements_etl.txt
dags/: nfl_dag.py
dags/nfl_etl/: main.py
dags/nfl_etl/core/: db_etls.py  db_mongo.py
dags/nfl_etl/log/: __init__.py
dags/nfl_etl/settings/: base.py
dags/nfl_etl/tests/: test_functions.py
dags/nfl_etl/utils/: functions.py
league_api/: .env  Dockerfile
league_api/src/: pyproject.toml
league_api/src/app/: main.py
league_api/src/app/core/: db_mongo.py
league_api/src/app/log/: __init__.py
league_api/src/app/models/: __init__.py
league_api/src/app/settings/: base.py  constants.py  security.py
league_api/src/app/tests/: conftest.py  sample_responses.py  test_functions.py  test_main.py
league_api/src/app/utils/: functions.py
mongo_db/set_up/: mongo-init.js
postgresql/set_up/: init.sql
