[tool.poetry]
name = "league_api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.87.0"
uvicorn = "^0.19.0"
requests = "^2.28.1"
pymongo = "^4.3.3"
sentry-sdk = {extras = ["fastapi"], version = "^1.11.0"}

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.2"
pytest-env = "^0.8.1"
httpx = "^0.23.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
